usuniety margin z body

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="scene1.js"></script>
     <script src="scene2.js"></script>
     <script src="game.js"></script>
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 </body>
