--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <script src="phaser.min.js"></script>
+	<script src="titlescreen.js"></script>
     <script src="scene1.js"></script>
     <script src="scene2.js"></script>
     <script src="game.js"></script>
