--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
     <script src="phaser.min.js"></script>
 	<script src="titlescreen.js"></script>
-    <script src="scene1.js"></script>
-    <script src="scene2.js"></script>
+    <script src="loader.js"></script>
+    <script src="level.js"></script>
     <script src="game.js"></script>
 </head>
 <body>
