changed head velocity, interactivity, level1 title, general cleanup

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="styles.css">
     <script src="phaser.min.js"></script>
-	<script src="titlescreen.js"></script>
+	<script src="gametitle.js"></script>
+	<script src="level1title.js"></script>
     <script src="loader.js"></script>
-    <script src="level.js"></script>
+    <script src="level1.js"></script>
     <script src="game.js"></script>
 </head>
 <body>
